in c4_String::c4_String(), only call memset() if the number of bytes to set is greater than 0.

BUG: 290688
MERGE: 4.8